generated/checker-for-evaluation/generated/test-Buffer-Overflow-a97de7bff13b1cc825c1b1344eaed8d6c2d3e695/build_logs/9/build_error_log4.log
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Decl.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h: In instantiation of ‘auto llvm::dyn_cast_if_present(Y&) [with X = clang::DeclRefExpr; Y = clang::PreStmt]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:764:32:   required from ‘auto llvm::dyn_cast_or_null(Y&) [with X = clang::DeclRefExpr; Y = clang::PreStmt]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:65:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:746:39: error: use of deleted function ‘clang::DeclRefExpr::DeclRefExpr(const clang::DeclRefExpr&)’
  746 |     return CastInfo<X, Y>::castFailed();
      |                                       ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:2:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1244:7: note: ‘clang::DeclRefExpr::DeclRefExpr(const clang::DeclRefExpr&)’ is implicitly deleted because the default definition would be ill-formed:
 1244 | class DeclRefExpr final
      |       ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1244:7: error: use of deleted function ‘clang::Expr::Expr(const clang::Expr&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:116:3: note: declared here
  116 |   Expr(const Expr&) = delete;
      |   ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1244:7: error: use of deleted function ‘llvm::TrailingObjects<BaseTy, TrailingTys>::TrailingObjects(const llvm::TrailingObjects<BaseTy, TrailingTys>&) [with BaseTy = clang::DeclRefExpr; TrailingTys = {clang::NestedNameSpecifierLoc, clang::NamedDecl*, clang::ASTTemplateKWAndArgsInfo, clang::TemplateArgumentLoc}]’
 1244 | class DeclRefExpr final
      |       ^~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Type.h:47,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclarationName.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclBase.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Decl.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/TrailingObjects.h:332:3: note: declared here
  332 |   TrailingObjects(const TrailingObjects &) = delete;
      |   ^~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Decl.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:747:67: error: use of deleted function ‘clang::DeclRefExpr::DeclRefExpr(const clang::DeclRefExpr&)’
  747 |   return CastInfo<X, Y>::doCastIfPossible(detail::unwrapValue(Val));
      |                                                                   ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::DeclRefExpr* {anonymous}::findDeclRefWithNameInParents(const clang::Stmt*, llvm::StringRef, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:65: error: cannot convert ‘clang::DeclRefExpr’ to ‘const clang::DeclRefExpr*’ in initialization
   51 |       if (const DeclRefExpr *DRE = dyn_cast_or_null<DeclRefExpr>(*PreStmtOpt)) {
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
      |                                                                 |
      |                                                                 clang::DeclRefExpr
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Decl.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h: In instantiation of ‘static llvm::CastInfo<To, From, Enable>::CastReturnType llvm::CastInfo<To, From, Enable>::castFailed() [with To = clang::DeclRefExpr; From = clang::PreStmt; Enable = void; llvm::CastInfo<To, From, Enable>::CastReturnType = clang::DeclRefExpr&]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:746:38:   required from ‘auto llvm::dyn_cast_if_present(Y&) [with X = clang::DeclRefExpr; Y = clang::PreStmt]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:764:32:   required from ‘auto llvm::dyn_cast_or_null(Y&) [with X = clang::DeclRefExpr; Y = clang::PreStmt]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:51:65:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:490:54: error: invalid cast of a prvalue expression of type ‘std::nullptr_t’ to type ‘llvm::CastInfo<clang::DeclRefExpr, clang::PreStmt, void>::CastReturnType’ {aka ‘clang::DeclRefExpr&’}
  490 |   static inline CastReturnType castFailed() { return CastReturnType(nullptr); }
      |                                                      ^~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
